Changes in <next release>:
 * Fix transparency with bar plot
 * Add File->Reload menu option to reload from saved document
 * Add tooltip to items in FieldWidget showing widget path
 * Use getcwdu() for python2 to avoid bugs combining paths
 * Handle inf/nan when converting to human readable form in plots
 * Fix CreateHistogram on command line without binparams parameter
 * Handle empty 2D dataset import with grid at edge enabled
 * Do not allow error bars on imported CSV non-numeric data
 * Handle missing argument in \size
 * For data edit dialog, allow 1D dataset to replace 2D dataset
 * Crash if zoom to be height when height is zero
 * Fix problem with 2D import if error message is in unicode
 * With axis-function widget catch result if greater than 1 dimension
 * Fix cloning for datasets with / in name

Changes in 1.23.2:
 * Add data clipping dataset plugin
 * Fix boxplot with manual settings
 * Fix plugin normalize and divide by maximum for new numpy versions
 * Avoid error in 2d data creation
 * Fix problems with unicode characters in plugins in Python 2.x
 * Clip axis to sensible range -1e100->1e100
 * Handle unicode errors from operating system in Veusz scripts
 * Handle unicode errors in error reports
 * Fix crash in \color

Changes in 1.23.1:
 * Enable compression in exported files (Benjamin K. Stuhl)
 * Fix saving histogram datasets
 * Add option to "thin" error bars plotted
 * Fix label colour in contour labelling
 * Remove use of deprecated Qt functions
 * Fix clone widget tools plugin
 * Fix EPS/PDF crash with broken axis widget
 * Do not crash filter plugin if using date datatype
 * Avoid crashes in normalise, subtract minimum and divide maximum plugins
 * Avoid crash in image widget
 * Avoid issue in identifying spacing in 1D->2D conversion
 * Add Gnuplot 2D data import plugin (Joerg Meyer)
 * When loading data from import plugins, provide default values
 * Remove some deprecated Qt uses
 * Fix issue when plotting non-plain datasets with nan values
